# bitceptron_iso

./: .gitignore  Cargo.toml  Dioxus.toml  Dioxus_windows.toml  README.md  input.css  tailwind.config.js
src/: app.rs  lib.rs  main.rs
src/ui/: asset_manager.rs  mod.rs  route.rs
src/ui/components/: flag_bearer_header.rs  mod.rs  number_selector.rs  sidebar.rs  sidebar_item.rs  stats_test_result_indicator.rs
src/ui/page/: dummy1.rs  dummy2.rs  home.rs  mod.rs
src/ui/page/tychentropy/: data_entry_panel.rs  final_layout.rs  mod.rs  outputs_panel.rs  settings_panel.rs
src/ui/view_model/: mod.rs  tychentropy_page.rs
