[package]
name = "bitceptron_iso"
version = "0.0.0-alpha.1"
edition = "2021"
license = "MIT"
description = "An air-gapped GUI suite for the coldest bitcoin custody."
authors = ["Nima Tavakoli Lahijani <nima.tavakkoli.lahijani@gmail.com>"]
documentation = "https://docs.rs/bitceptron_iso"
repository = "https://github.com/bitceptron/bitceptron_iso"
keywords = ["bitcoin", "bitceptron", "custody", "wallet"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0-alpha.2", features = ["desktop", "router"] }
tychentropy = "0.1.0-alpha.1"
dioxus-logger = "0.5.1"
getset = "0.1.3"
bip39 = "2.0.0"
bitcoin = "0.32.3"

[features]
bundle = []